# Sourcing_agent

./: README.md  advanced_sourcing_agent.py  agents.yaml  candidate_profiles.json  chroma.sqlite3  constants.py  crew.py  custom_tools.py  debug_agent.py  debug_filter.py  debug_search.py  demo_query_templates.py  demo_smart_evaluation.py  elite_evaluator.py  job_context_extractor.py  jobs.json  main.py  proxycurl.py  pyproject.toml  requirements.txt  smart_evaluator.py  smart_sourcing_agent.py  streamlit_app.py  tasks.yaml  test.py  test_advanced_agent.py  test_agent.py  test_debug_agent.py  test_env.py  test_google_search.py  test_linkedin_search.py  test_ml_detection.py  testanddel.py
Flowcharts/: Feature_1_Search_Engine.drawio  Feature_2_Send_Messages.drawio
ai_outreach_crew/: __init__.py  crew.py  elite_evaluator.py
ai_outreach_crew/tools/: custom_tools.py  linkedin_automation.py
documents/: job_ad_1.txt
